# pocketbook-test-task

./: .clang-format  .gitignore  CMakeLists.txt  README.md
qml/: main.qml
src/: Bitmap.h  FileReaderWriter.cpp  FileReaderWriter.h  MainUiController.cpp  MainUiController.h  main.cpp
